# controllers/podcast_controller.go
@@ -7,6 +7,7 @@ import (
 	"github.com/ecea-nitt/ecea-server/middlewares"
 	"github.com/ecea-nitt/ecea-server/models"
 	"github.com/ecea-nitt/ecea-server/services"
+	"github.com/ecea-nitt/ecea-server/utils"
 	"github.com/fatih/color"
 	"github.com/labstack/echo/v4"
 )
@@ -21,6 +22,9 @@ type PodcastController interface {
 	EditURL(c echo.Context) error
 	EditDescription(c echo.Context) error
 	DeletePodcast(c echo.Context) error
+	GetPodcastByName(c echo.Context) error
+	GetAllPodcasts(c echo.Context) error
+	GetPodcastByType(c echo.Context) error
 }
 
 func NewPodcastController(ps services.PodcastService) PodcastController {
@@ -204,4 +208,78 @@ func (pc *podcastController) DeletePodcast(c echo.Context) error {
 	}
 
 	return middlewares.Responder(c, http.StatusOK, http.StatusText(http.StatusOK))
+}
+
+// GetPodcastByName godoc
+// @Summary		Get Podcast By Name
+// @Description	Gets a podcast by name
+// @Tags		Podcast
+// @Accept		json
+// @Produce		json
+// @Param		name	path	string	true 	"Enter name"
+// @Success		200	{object}    models.Podcasts
+// @Failure		400	{object}	models.Error
+// @Failure		500	{object}	models.Error
+// @Router		/v1/podcast/get/{name} [get]
+func (pc *podcastController) GetPodcastByName(c echo.Context) error {
+	name, err := utils.NameValidator(c.Param("name"))
+	if err != nil {
+		log.Println(color.RedString(err.Error()))
+		return middlewares.Responder(c, http.StatusBadRequest, http.StatusText(http.StatusBadRequest))
+	}
+
+	podcast, err := pc.ps.GetPodcastByName(name)
+	if err != nil {
+		log.Println(color.RedString(err.Error()))
+		return middlewares.Responder(c, http.StatusInternalServerError, http.StatusText(http.StatusInternalServerError))
+	}
+
+	return middlewares.Responder(c, http.StatusOK, podcast)
+}
+
+// GetAllPodcasts godoc
+// @Summary		Get All Podcasts
+// @Description	Gets all podcasts
+// @Tags		Podcast
+// @Accept		json
+// @Produce		json
+// @Success		200	{object}    []models.Podcasts
+// @Failure		400	{object}	models.Error
+// @Failure		500	{object}	models.Error
+// @Router		/v1/podcast/get/all [get]
+func (pc *podcastController) GetAllPodcasts(c echo.Context) error {
+	podcasts, err := pc.ps.GetAllPodcasts()
+	if err != nil {
+		log.Println(color.RedString(err.Error()))
+		return middlewares.Responder(c, http.StatusInternalServerError, http.StatusText(http.StatusInternalServerError))
+	}
+
+	return middlewares.Responder(c, http.StatusOK, podcasts)
+}
+
+// GetPodcastByType godoc
+// @Summary		Get Podcast By Type
+// @Description	Gets a podcast by type
+// @Tags		Podcast
+// @Accept		json
+// @Produce		json
+// @Param		type	path	string	true 	"Enter type"
+// @Success		200	{object}    []models.Podcasts
+// @Failure		400	{object}	models.Error
+// @Failure		500	{object}	models.Error
+// @Router		/v1/podcast/getall/{type} [get]
+func (pc *podcastController) GetPodcastByType(c echo.Context) error {
+	podcastType, err := utils.PodcastTypeValidator(c.Param("type"))
+	if err != nil {
+		log.Println(color.RedString(err.Error()))
+		return middlewares.Responder(c, http.StatusBadRequest, http.StatusText(http.StatusBadRequest))
+	}
+
+	podcasts, err := pc.ps.GetPodcastByType(podcastType)
+	if err != nil {
+		log.Println(color.RedString(err.Error()))
+		return middlewares.Responder(c, http.StatusInternalServerError, http.StatusText(http.StatusInternalServerError))
+	}
+
+	return middlewares.Responder(c, http.StatusOK, podcasts)
 }
