# docs/swagger.yaml
@@ -49,6 +49,27 @@ definitions:
       team:
         $ref: '#/definitions/models.MemberTeams'
     type: object
+  models.PodcastType:
+    enum:
+    - GUEST_LECTURE
+    - CAREER_PATH
+    type: string
+    x-enum-varnames:
+    - Guestlecture
+    - CareerPath
+  models.Podcasts:
+    properties:
+      description:
+        type: string
+      image_url:
+        type: string
+      mediaUrl:
+        type: string
+      name:
+        type: string
+      type:
+        $ref: '#/definitions/models.PodcastType'
+    type: object
   models.RegisterRequest:
     properties:
       email:
@@ -283,6 +304,91 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Edit URL
+      tags:
+      - Podcast
+  /v1/podcast/get/{name}:
+    get:
+      consumes:
+      - application/json
+      description: Gets a podcast by name
+      parameters:
+      - description: Enter name
+        in: path
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Podcasts'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Get Podcast By Name
+      tags:
+      - Podcast
+  /v1/podcast/get/all:
+    get:
+      consumes:
+      - application/json
+      description: Gets all podcasts
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Podcasts'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Get All Podcasts
+      tags:
+      - Podcast
+  /v1/podcast/getall/{type}:
+    get:
+      consumes:
+      - application/json
+      description: Gets a podcast by type
+      parameters:
+      - description: Enter type
+        in: path
+        name: type
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Podcasts'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: Get Podcast By Type
       tags:
       - Podcast
   /v1/team/add:
