# router/podcast.go
@@ -13,9 +13,9 @@ func PodcastRoutes(e *echo.Group, c controllers.PodcastController) {
 	podcast.POST("/create", middlewares.Authorizer(c.CreatePodcast))
 
 	// Read
-	// podcast.GET("/getall", c.GetAllPodcasts)
-	// podcast.GET("/getall/:type", c.GetPodcastByType)
-	// podcast.GET("/get/:name", c.GetPodcastByName)
+	podcast.GET("/getall", c.GetAllPodcasts)
+	podcast.GET("/getall/:type", c.GetPodcastByType)
+	podcast.GET("/get/:name", c.GetPodcastByName)
 
 	// Update
 	podcast.PUT("/edit/thumbnail", middlewares.Authorizer(c.EditThumbnail))
